--- a/index (1).html
+++ b/index (1).html
@@ -15,7 +15,7 @@
         </nav>
         <header>
             <div class="center">
-                <img src=""></img>
+                <img src="260px-Minecraft_capa.png"></img>
             </div>
             <h1>Minecraft</h1>
             <p>
